--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <div class="col">
           <div class="d-flex d-md-4 m-4">
             <span class="mdi mdi-usb"></span>
-            <div class="col header-buttons flex-end">
-              <button>Home</button>
-              <button>About</button>
-              <button>Services</button>
-              <button>Portfolio</button>
-              <button>Team</button>
-              <button>Blog</button>
+            <div class="col d-flex justify-content-end">
+              <button class="header-buttons shadow-lg">Home</button>
+              <button class="header-buttons">About</button>
+              <button class="header-buttons">Services</button>
+              <button class="header-buttons">Portfolio</button>
+              <button class="header-buttons">Team</button>
+              <button class="header-buttons">Blog</button>
             </div>
           </div>
         </div>
@@ -47,17 +47,48 @@
 
   <!--ANCHOR beginning of Main element-->
   <main>
-
-  </main>
-  <section class="container-fluid bg-sucess-emphasis">
-    <div class="row">
-      <div class="col">
-        <h1>Welcome</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia quaerat fuga totam molestiae. Porro fugit
-          quas nulla hic expedita dolorum!</p>
+    <section class="container-fluid bg-sucess-emphasis">
+      <div class="row">
+        <div class="col">
+          <h1>Welcome</h1>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia quaerat fuga totam molestiae. Porro
+            fugit quas nulla hic expedita dolorum!</p>
+          <div class="m-3 p-5">
+            <button class="h1-buttons shadow-lg">button</button>
+            <button class="h1-buttons shadow-lg">button</button>
+          </div>
+        </div>
+        <div class="col-12">
+          <div class="card">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 d-flex justify-content-space-around p-5 m-3">
+            <span class="card p-5">something</span>
+            <span class="card p-5">something</span>
+            <span class="card p-5">something</span>
+            <span class="card p-5">something</span>
+          </div>
+          <div class="row"></div>
+          <div class="col 12 p-0">
+            <div class="text-center bg-white">
+              <h2 class="text-black">About Us</h2>
+              <p class="text-black">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, minus, harum
+                voluptate excepturi,
+                veniam
+                facilis pariatur quam obcaecati earum ab nihil dolore nobis voluptatibus alias.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6"></div>
+            <span>content</span>
+            <span>content</span>
+          </div>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </main>
+
   <!--ANCHOR beginning of Footer element-->
   <footer></footer>
 
