CloneWars dialing 'er in

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   <!--ANCHOR beginning of Main element-->
   <main>
-    <section class="container-fluid bg-sucess-emphasis">
+    <section class="container-fluid bg-sucess-emphasis text-light">
       <div class="row">
         <div class="col">
           <h1>Welcome</h1>
@@ -59,32 +59,61 @@
           </div>
         </div>
         <div class="col-12">
-          <div class="card">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 d-flex justify-content-space-around p-5 m-3">
+          <span class="card p-5">something</span>
+          <span class="card p-5">something</span>
+          <span class="card p-5">something</span>
+          <span class="card p-5">something</span>
+        </div>
+      </div>
+      <div class="row bg-light">
+        <div class="col-12">
+          <div class="text-center">
+            <h2 class="text-black">About Us</h2>
+            <p class="text-black">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, minus, harum
+              voluptate excepturi,
+              veniam
+              facilis pariatur quam obcaecati earum ab nihil dolore nobis voluptatibus alias.</p>
           </div>
         </div>
-        <div class="row">
-          <div class="col-12 d-flex justify-content-space-around p-5 m-3">
-            <span class="card p-5">something</span>
-            <span class="card p-5">something</span>
-            <span class="card p-5">something</span>
-            <span class="card p-5">something</span>
+      </div>
+      <div class="row bg-light text-dark">
+        <span class="col-6">
+          <div class="p-5">
+
+            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+            <img class="img-fluid mb-3 rounded-5"
+              src="https://images.unsplash.com/photo-1601397922721-4326ae07bbc5?q=80&w=1471&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="homework">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque incidunt ex sed, ullam qui
+              veritatis?
+              Officiis eligendi tempore nisi nulla!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque est fuga aut excepturi nulla consectetur
+              quisquam minus porro ducimus, perspiciatis ut? Numquam voluptatum suscipit ullam eaque, atque harum
+              molestiae voluptates.</p>
           </div>
-          <div class="row"></div>
-          <div class="col 12 p-0">
-            <div class="text-center bg-white">
-              <h2 class="text-black">About Us</h2>
-              <p class="text-black">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, minus, harum
-                voluptate excepturi,
-                veniam
-                facilis pariatur quam obcaecati earum ab nihil dolore nobis voluptatibus alias.</p>
-            </div>
+        </span>
+        <span class="bg-light col-6">
+          <div class="p-5">
+
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque incidunt ex sed, ullam qui
+              veritatis?
+              Officiis eligendi tempore nisi nulla!</p>
+            <ul>Lorem ipsum dolor sit amet consectetur adipisicing elit.</ul>
+            <ul>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos!</ul>
+            <ul>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam voluptates accusantium aliquid sequi
+              quos provident, vel cupiditate id adipisci architecto!</ul>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque est fuga aut excepturi nulla consectetur
+              quisquam minus porro ducimus, perspiciatis ut? Numquam voluptatum suscipit ullam eaque, atque harum
+              molestiae voluptates.</p>
+            <img class="img-fluid mb-3 rounded-5"
+              src="https://images.unsplash.com/photo-1583321500900-82807e458f3c?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="homework">
           </div>
-          <div class="row">
-            <div class="col-6"></div>
-            <span>content</span>
-            <span>content</span>
-          </div>
-        </div>
+        </span>
       </div>
     </section>
   </main>
